Refresh contents from local project jMetalAuto