@@ -1,25 +1,26 @@
 package org.uma.jmetal.auto.irace;
 
 import org.uma.jmetal.auto.algorithm.EvolutionaryAlgorithm;
-import org.uma.jmetal.auto.component.evaluation.Evaluation;
-import org.uma.jmetal.auto.component.evaluation.impl.SequentialEvaluation;
-import org.uma.jmetal.auto.component.initialsolutionscreation.InitialSolutionsCreation;
-import org.uma.jmetal.auto.component.replacement.Replacement;
-import org.uma.jmetal.auto.component.replacement.impl.RankingAndDensityEstimatorReplacement;
-import org.uma.jmetal.auto.component.selection.MatingPoolSelection;
-import org.uma.jmetal.auto.component.termination.Termination;
-import org.uma.jmetal.auto.component.termination.impl.TerminationByEvaluations;
-import org.uma.jmetal.auto.component.variation.Variation;
 import org.uma.jmetal.auto.parameter.IntegerParameter;
 import org.uma.jmetal.auto.parameter.Parameter;
 import org.uma.jmetal.auto.parameter.RealParameter;
 import org.uma.jmetal.auto.parameter.catalogue.*;
 import org.uma.jmetal.component.densityestimator.DensityEstimator;
 import org.uma.jmetal.component.densityestimator.impl.CrowdingDistanceDensityEstimator;
+import org.uma.jmetal.component.evaluation.Evaluation;
+import org.uma.jmetal.component.evaluation.impl.SequentialEvaluation;
+import org.uma.jmetal.component.initialsolutioncreation.InitialSolutionsCreation;
 import org.uma.jmetal.component.ranking.Ranking;
 import org.uma.jmetal.component.ranking.impl.FastNonDominatedSortRanking;
+import org.uma.jmetal.component.ranking.impl.MergeNonDominatedSortRanking;
+import org.uma.jmetal.component.replacement.Replacement;
+import org.uma.jmetal.component.replacement.impl.RankingAndDensityEstimatorReplacement;
+import org.uma.jmetal.component.selection.MatingPoolSelection;
+import org.uma.jmetal.component.termination.Termination;
+import org.uma.jmetal.component.termination.impl.TerminationByEvaluations;
+import org.uma.jmetal.component.variation.Variation;
 import org.uma.jmetal.problem.doubleproblem.DoubleProblem;
-import org.uma.jmetal.qualityindicator.impl.hypervolume.PISAHypervolume;
+import org.uma.jmetal.qualityindicator.impl.hypervolume.impl.PISAHypervolume;
 import org.uma.jmetal.solution.doublesolution.DoubleSolution;
 import org.uma.jmetal.util.archive.Archive;
 import org.uma.jmetal.util.archive.impl.CrowdingDistanceArchive;
@@ -55,23 +56,26 @@ public class AutoNSGAIIirace {
     problemNameParameter = new ProblemNameParameter<>(args);
     populationSizeParameter = new PopulationSizeParameter(args);
     referenceFrontFilename = new ReferenceFrontFilenameParameter(args);
-    maximumNumberOfEvaluationsParameter = new IntegerParameter("maximumNumberOfEvaluations", args, 1, 10000000) ;
+    maximumNumberOfEvaluationsParameter =
+        new IntegerParameter("maximumNumberOfEvaluations", args, 1, 10000000);
 
-    fixedParameterList.add(problemNameParameter) ;
-    fixedParameterList.add(referenceFrontFilename) ;
-    fixedParameterList.add(maximumNumberOfEvaluationsParameter) ;
-    fixedParameterList.add(populationSizeParameter) ;
+    fixedParameterList.add(problemNameParameter);
+    fixedParameterList.add(referenceFrontFilename);
+    fixedParameterList.add(maximumNumberOfEvaluationsParameter);
+    fixedParameterList.add(populationSizeParameter);
 
     for (Parameter<?> parameter : fixedParameterList) {
       parameter.parse().check();
     }
 
     algorithmResultParameter =
-            new StringCategoricalParameter("algorithmResult", args, Arrays.asList("externalArchive", "population"));
+        new StringCategoricalParameter(
+            "algorithmResult", args, Arrays.asList("externalArchive", "population"));
     populationSizeWithArchiveParameter =
-            new PopulationSizeWithArchive(args, Arrays.asList(10, 20, 50, 100, 200));
+        new PopulationSizeWithArchive(args, Arrays.asList(10, 20, 50, 100, 200));
     algorithmResultParameter.addSpecificParameter("population", populationSizeParameter);
-    algorithmResultParameter.addSpecificParameter("externalArchive", populationSizeWithArchiveParameter);
+    algorithmResultParameter.addSpecificParameter(
+        "externalArchive", populationSizeWithArchiveParameter);
 
     createInitialSolutionsParameter =
         new CreateInitialSolutionsParameter(
@@ -83,15 +87,15 @@ public class AutoNSGAIIirace {
     selectionParameter.addSpecificParameter("tournament", selectionTournamentSize);
 
     CrossoverParameter crossover = new CrossoverParameter(args, Arrays.asList("SBX", "BLX_ALPHA"));
-    ProbabilityParameter crossoverProbability = new ProbabilityParameter("crossoverProbability", args);
+    ProbabilityParameter crossoverProbability =
+        new ProbabilityParameter("crossoverProbability", args);
     crossover.addGlobalParameter(crossoverProbability);
     RepairDoubleSolutionStrategyParameter crossoverRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter("crossoverRepairStrategy",
-            args,  Arrays.asList("random", "round", "bounds"));
+        new RepairDoubleSolutionStrategyParameter(
+            "crossoverRepairStrategy", args, Arrays.asList("random", "round", "bounds"));
     crossover.addGlobalParameter(crossoverRepairStrategy);
 
-    RealParameter distributionIndex =
-        new RealParameter("sbxDistributionIndex", args,5.0, 400.0);
+    RealParameter distributionIndex = new RealParameter("sbxDistributionIndex", args, 5.0, 400.0);
     crossover.addSpecificParameter("SBX", distributionIndex);
 
     RealParameter alpha = new RealParameter("blxAlphaCrossoverAlphaValue", args, 0.0, 1.0);
@@ -99,11 +103,12 @@ public class AutoNSGAIIirace {
 
     MutationParameter mutation =
         new MutationParameter(args, Arrays.asList("uniform", "polynomial"));
-    ProbabilityParameter mutationProbability = new ProbabilityParameter("mutationProbability", args);
+    ProbabilityParameter mutationProbability =
+        new ProbabilityParameter("mutationProbability", args);
     mutation.addGlobalParameter(mutationProbability);
     RepairDoubleSolutionStrategyParameter mutationRepairStrategy =
-        new RepairDoubleSolutionStrategyParameter("mutationRepairStrategy",
-            args,  Arrays.asList("random", "round", "bounds"));
+        new RepairDoubleSolutionStrategyParameter(
+            "mutationRepairStrategy", args, Arrays.asList("random", "round", "bounds"));
     mutation.addGlobalParameter(mutationRepairStrategy);
 
     RealParameter distributionIndexForMutation =
@@ -117,15 +122,15 @@ public class AutoNSGAIIirace {
     DifferentialEvolutionCrossoverParameter differentialEvolutionCrossover =
         new DifferentialEvolutionCrossoverParameter(args);
 
-    RealParameter f = new RealParameter("f", args, 0.0, 1.0) ;
-    RealParameter cr = new RealParameter("cr", args, 0.0, 1.0) ;
+    RealParameter f = new RealParameter("f", args, 0.0, 1.0);
+    RealParameter cr = new RealParameter("cr", args, 0.0, 1.0);
     differentialEvolutionCrossover.addGlobalParameter(f);
     differentialEvolutionCrossover.addGlobalParameter(cr);
 
-    offspringPopulationSizeParameter = new OffspringPopulationSizeParameter(args, Arrays.asList(1, 10, 50, 100));
+    offspringPopulationSizeParameter =
+        new OffspringPopulationSizeParameter(args, Arrays.asList(1, 10, 50, 100, 200, 400));
 
-    variationParameter =
-        new VariationParameter(args, Arrays.asList("crossoverAndMutationVariation"));
+    variationParameter = new VariationParameter(args, List.of("crossoverAndMutationVariation"));
     variationParameter.addGlobalParameter(offspringPopulationSizeParameter);
     variationParameter.addSpecificParameter("crossoverAndMutationVariation", crossover);
     variationParameter.addSpecificParameter("crossoverAndMutationVariation", mutation);
@@ -155,19 +160,17 @@ public class AutoNSGAIIirace {
       populationSizeParameter.setValue(populationSizeWithArchiveParameter.getValue());
     }
 
-    Ranking<DoubleSolution> ranking = new FastNonDominatedSortRanking<>(new DominanceComparator<>());
+    Ranking<DoubleSolution> ranking =
+        new MergeNonDominatedSortRanking<>();
     DensityEstimator<DoubleSolution> densityEstimator = new CrowdingDistanceDensityEstimator<>();
-    MultiComparator<DoubleSolution> rankingAndCrowdingComparator =
-        new MultiComparator<DoubleSolution>(
-            Arrays.asList(
-                ranking.getSolutionComparator(), densityEstimator.getSolutionComparator()));
+    var rankingAndCrowdingComparator =
+        new MultiComparator<>(
+            List.of(ranking.getSolutionComparator(), densityEstimator.getSolutionComparator()));
 
-    InitialSolutionsCreation<DoubleSolution> initialSolutionsCreation =
+    var initialSolutionsCreation =
         createInitialSolutionsParameter.getParameter(problem, populationSizeParameter.getValue());
-    Variation<DoubleSolution> variation =
-        (Variation<DoubleSolution>)
-            variationParameter.getParameter();
-    MatingPoolSelection<DoubleSolution> selection =
+    var variation = (Variation<DoubleSolution>) variationParameter.getParameter();
+    var selection =
         (MatingPoolSelection<DoubleSolution>)
             selectionParameter.getParameter(
                 variation.getMatingPoolSize(), rankingAndCrowdingComparator);
@@ -180,7 +183,7 @@ public class AutoNSGAIIirace {
     Termination termination =
         new TerminationByEvaluations(maximumNumberOfEvaluationsParameter.getValue());
 
-    EvolutionaryAlgorithm<DoubleSolution> nsgaii =
+    var nsgaii =
         new EvolutionaryAlgorithm<>(
             "NSGAII",
             evaluation,
@@ -190,7 +193,6 @@ public class AutoNSGAIIirace {
             variation,
             replacement,
             archive);
-
     return nsgaii;
   }
 
@@ -201,20 +203,21 @@ public class AutoNSGAIIirace {
     EvolutionaryAlgorithm<DoubleSolution> nsgaII = nsgaiiWithParameters.create();
     nsgaII.run();
 
-    String referenceFrontFile = "/pareto_fronts/" + nsgaiiWithParameters.referenceFrontFilename.getValue() ;
+    String referenceFrontFile =
+        "resources/referenceFrontsCSV/" + nsgaiiWithParameters.referenceFrontFilename.getValue();
     Front referenceFront = new ArrayFront(referenceFrontFile);
 
     FrontNormalizer frontNormalizer = new FrontNormalizer(referenceFront);
     Front normalizedReferenceFront = frontNormalizer.normalize(referenceFront);
     Front normalizedFront = frontNormalizer.normalize(new ArrayFront(nsgaII.getResult()));
     List<PointSolution> normalizedPopulation =
-            FrontUtils.convertFrontToSolutionList(normalizedFront);
+        FrontUtils.convertFrontToSolutionList(normalizedFront);
 
     double referenceFrontHV =
-            new PISAHypervolume<PointSolution>(normalizedReferenceFront)
-                    .evaluate(FrontUtils.convertFrontToSolutionList(normalizedReferenceFront));
+        new PISAHypervolume<PointSolution>(normalizedReferenceFront)
+            .evaluate(FrontUtils.convertFrontToSolutionList(normalizedReferenceFront));
     double obtainedFrontHV =
-            new PISAHypervolume<PointSolution>(normalizedReferenceFront).evaluate(normalizedPopulation);
+        new PISAHypervolume<PointSolution>(normalizedReferenceFront).evaluate(normalizedPopulation);
     System.out.println((referenceFrontHV - obtainedFrontHV) / referenceFrontHV);
   }
 }
